--- a/abi/prod/history.txt
+++ b/abi/prod/history.txt
@@ -4,3 +4,5 @@ Token UZD deployed to: 0xe5c987f93734cb44ab03f1b18e30a374254891b6
 v1.1
 Token UZD deployed to: 0x015B94AB2B0A14A96030573FBcD0F3D3d763541F
 
+v1.2
+Token UZD deployed to: 0xb40b6608B2743E691C9B54DdBDEe7bf03cd79f1c
