--- a/abi/prod/history.txt
+++ b/abi/prod/history.txt
@@ -6,3 +6,6 @@ Token UZD deployed to: 0x015B94AB2B0A14A96030573FBcD0F3D3d763541F
 
 v1.2
 Token UZD deployed to: 0xb40b6608B2743E691C9B54DdBDEe7bf03cd79f1c
+
+ZunamiRedistributor deployed to: 0xD9cc8b337D9730161B4166EDEE5bEFF6C5dec334
+
